Minor spacing fix

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,7 +5,7 @@ body.home {
   }
 
   .hero-unit {
-    margin-bottom: $base-spacing-unit;
+    margin-bottom: $base-spacing-unit * 1.5;
   }
 
   .about_items {
